# learn-agent-tools

./: .agents  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
agents/: Dockerfile  pyproject.toml
agents/src/: main.py
agents/src/infrastructure/: __init__.py  error_handlers.py  llm_client.py  logger.py  middleware.py
agents/src/infrastructure/mcp/: __init__.py  connection_manager.py  tool_aggregator.py
agents/src/orchestrator/: __init__.py  graph.py  orchestrator.py  state.py
agents/src/workers/: __init__.py
agents/src/workers/clarification/: __init__.py  agent.py  models.py  prompts.py
agents/src/workers/common/: exceptions.py
agents/src/workers/document/: __init__.py  agent.py
agents/src/workers/execution/: __init__.py  agent.py  prompts.py
agents/src/workers/input_guard/: __init__.py  agent.py  models.py  prompts.py
agents/src/workers/intent/: __init__.py  agent.py  models.py  prompts.py
agents/src/workers/planning/: __init__.py  agent.py  prompts.py
agents/src/workers/research/: __init__.py  agent.py
agents/src/workers/review/: __init__.py  agent.py  models.py  prompts.py  utils.py
agents/src/workers/web_search/: __init__.py  agent.py  utils.py
api-server/: Dockerfile  pyproject.toml
api-server/src/: main.py
api-server/src/auth/: __init__.py
api-server/src/auth/api/: dependencies.py  router.py  schemas.py
api-server/src/auth/application/: service.py
api-server/src/chat/: __init__.py
api-server/src/core/: __init__.py  agent_client.py  config.py  error_handlers.py  exceptions.py  middleware.py
(+38 files in other folders)
